monitor/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
