monitor/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:255945442255:certificate/ab4d119c-d073-4d08-90c3-abb44ac88bc1
    alb.ingress.kubernetes.io/group.name: ce-grp-1
    external-dns.alpha.kubernetes.io/hostname: prometheus.ce-grp-1.sctp-sandbox.com
spec:
  rules:
    - host: prometheus.ce-grp-1.sctp-sandbox.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 80
  tls:
    - hosts:
      - prometheus.ce-grp-1.sctp-sandbox.com
      secretName: prometheus-tls  # This name is symbolic; ACM manages the cert
